unpackaged/main/default/objects/PaginaWeb__c/PaginaWeb__c.object-meta.xml
<CustomObject>
    <label>Página Web</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Pagina Web</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Páginas Web</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>