unpackaged/main/default/objects/PaginaWeb__c/fields/AguaDrenajeMonterrey__c.field-meta.xml
<CustomField>
    <fullName>AguaDrenajeMonterrey__c</fullName>
    <label>Agua y Drenaje Monterrey</label>
    <type>Url</type>
</CustomField>