unpackaged/main/default/objects/PaginaWeb__c/fields/CasasJaver__c.field-meta.xml
<CustomField>
    <fullName>CasasJaver__c</fullName>
    <label>Casas Javer</label>
    <type>Url</type>
</CustomField>