unpackaged/main/default/objects/PaginaWeb__c/fields/CoberturaCalidad__c.field-meta.xml
<CustomField>
    <fullName>CoberturaCalidad__c</fullName>
    <label>Cobertura Calidad</label>
    <type>Url</type>
</CustomField>