unpackaged/main/default/objects/PaginaWeb__c/fields/ComisionFederalElectrecidad__c.field-meta.xml
<CustomField>
    <fullName>ComisionFederalElectrecidad__c</fullName>
    <label>Comisión Federal de Electrecidad</label>
    <type>Url</type>
</CustomField>