unpackaged/main/default/objects/PaginaWeb__c/fields/Eloqua__c.field-meta.xml
<CustomField>
    <fullName>Eloqua__c</fullName>
    <label>Eloqua</label>
    <type>Url</type>
</CustomField>