unpackaged/main/default/objects/PaginaWeb__c/fields/Infonavit__c.field-meta.xml
<CustomField>
    <fullName>Infonavit__c</fullName>
    <label>Infonavit</label>
    <type>Url</type>
</CustomField>