unpackaged/main/default/objects/PaginaWeb__c/fields/RutaDirecta__c.field-meta.xml
<CustomField>
    <fullName>RutaDirecta__c</fullName>
    <label>Ruta Directa</label>
    <type>Url</type>
</CustomField>