unpackaged/main/default/objects/PaginaWeb__c/listViews/P_ginas_Web.listView-meta.xml
<ListView>
    <fullName>P_ginas_Web</fullName>
    <columns>NAME</columns>
    <columns>AguaDrenajeMonterrey__c</columns>
    <columns>CasasJaver__c</columns>
    <columns>CoberturaCalidad__c</columns>
    <columns>ComisionFederalElectrecidad__c</columns>
    <columns>Infonavit__c</columns>
    <columns>RutaDirecta__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>0000</value>
    </filters>
    <label>Paginas Web</label>
</ListView>